--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -151,8 +151,8 @@ table.datatable-responsive-search-validation thead .sorting_asc:after {
 
 .model-link {
 	float: right;
-	font-size: 14px;
-	padding-top: 10px;
+	font-size: 12px;
+	padding-top: 8px;
 }
 
 .buttons-header {
@@ -629,3 +629,6 @@ h2 {
 	box-shadow: none;
 }
 
+#table-discipline-selected {
+	margin-top: 20px;
+}
