--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 <body>
-<th:block th:fragment="allegati(wrapper, withIdEditabili, tipoAllegato, counter, note, withFirma, editabile)">
+<th:block th:fragment="allegati(wrapper, withIdEditabili, tipoAllegato, counter, note, withFirma, editabile, required)">
 
 	<!-- wrapper con idEditabili -->
 	<th:block th:if="${__withIdEditabili__}">
@@ -17,26 +17,26 @@
 			<label class="control-label col-xs-1" th:text="${counter}">numero indice</label>
 			<label class="control-label col-md-3 col-sm-3 col-xs-7" th:for="__${tipoAllegato}__">
 				<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.__${tipoAllegato}__}">tipo allegato</span>
-				<span th:if="${note == null and editabile}" class="required">*</span>
+				<span th:if="${note == null and editabile and required}" class="required">*</span>
 				<span class="small" style="display: block;" th:unless="${note == null}" th:text="${note}">messaggio aggiuntivo</span>
 			</label>
 			<th:block th:if="${editabile}">
-				<div class="col-md-4 col-sm-4 col-xs-12">
-					<div class="col-xs-12">
-						<input type="file" accept="application/pdf" onchange="submitFile(this)" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" required="required"
+				<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+					<div class="col-xs-10">
+						<input type="file" accept="application/pdf" onchange="submitFile(this)" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" th:required="${required}"
 							style="display: none;" th:disabled="${counter == null or !#lists.contains(__${wrapper}__.idEditabili, counter)}"/>
 						<input type="button" class="pull-left allegato-btn btn btn-success" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" th:disabled="${counter == null or !#lists.contains(__${wrapper}__.idEditabili, counter)}" />
 						<div th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
 						<div th:if="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="#{label.nessun_file_selezionato}"></a></div>
 					</div>
+					<!-- pulsante per aggiungere firma -->
+					<th:block th:if="${withFirma}">
+						<button type="button" onclick="alert('alert temporaneo, questo onclick verrà sostituito dal service per la firma digitale!')" class="btn btn-primary firma pull-right" th:title="#{label.firma_digitalmente}"><span class="fa fa-pencil"></span></button>
+					</th:block>
 				</div>
-				<!-- pulsante per aggiungere firma -->
-				<th:block th:if="${withFirma}">
-					<button type="button" onclick="alert('alert temporaneo, questo onclick verrà sostituito dal service per la firma digitale!')" class="btn btn-primary firma" th:title="#{label.firma_digitalmente}"><span class="fa fa-pencil"></span></button>
-				</th:block>
 			</th:block>
 			<th:block th:unless="${editabile}">
-				<div class="col-md-4 col-sm-4 col-xs-12">
+				<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 					<div class="" th:unless="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value"><span class="fa fa-download"> </span> <a th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div></div>
 					<div class="" th:if="${__${wrapper}__.__${tipoAllegato}__.new}"><div class="value danger" th:text="#{label.allegato_non_inserito}"></div></div>
 				</div>
@@ -55,19 +55,19 @@
 			<label class="control-label col-md-4 col-sm-4 col-xs-7" th:for="__${tipoAllegato}__">
 				<span th:text="#{label.__${tipoAllegato}__}">label.tipoAllegato</span>
 			</label>
-			<div class="col-md-4 col-sm-4 col-xs-12">
-				<div class="form-control col-md-7 col-xs-12 btn">
+			<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+				<div class="col-xs-10">
 					<input type="file" accept="application/pdf" onchange="submitFile(this)" th:id="__${tipoAllegato}__" th:name="__${tipoAllegato}___multipart" required="required"
 						style="display: none;" />
 					<input type="button" class="pull-left allegato-btn btn btn-success" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}__');|" />
 					<div th:unless="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="${__${wrapper}__.__${tipoAllegato}__.nomeFile}" th:href="@{|/file/${__${wrapper}__.__${tipoAllegato}__.id}|}"></a></div>
 					<div th:if="${__${wrapper}__.__${tipoAllegato}__.new}" class="allegato-label"><a th:id="__${tipoAllegato}___label" th:text="#{label.nessun_file_selezionato}"></a></div>
 				</div>
+				<!-- pulsante per aggiungere firma -->
+				<th:block th:if="${withFirma}">
+					<button type="button" onclick="alert('alert temporaneo, questo onclick verrà sostituito dal service per la firma digitale!')" class="btn btn-primary firma pull-right" th:title="#{label.firma_digitalmente}"><span class="fa fa-pencil"></span></button>
+				</th:block>
 			</div>
-			<!-- pulsante per aggiungere firma -->
-			<th:block th:if="${withFirma}">
-				<button type="button" onclick="alert('alert temporaneo, questo onclick verrà sostituito dal service per la firma digitale!')" class="btn btn-primary firma" th:title="#{label.firma_digitalmente}"><span class="fa fa-pencil"></span></button>
-			</th:block>
 			<div th:if="${#fields.hasErrors('__${wrapper}__.__${tipoAllegato}__')}" class="alert" th:errors="${__${wrapper}__.__${tipoAllegato}__}"></div>
 		</div>
 	</th:block>
