--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -40,7 +40,7 @@
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="${editabile ? #messages.msg('label.is_coordinatore') : #messages.msg('label.inserito_come_coordinatore')}">Inserisci come Coordinatore del Comitato Scientifico</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="checkbox">
 										<input id="isCoordinatore_comitato" name="isCoordinatore_comitato"
 											class="flat" type="checkbox" th:field="${personaWrapper.persona.coordinatoreComitatoScientifico}" th:disabled="${#lists.isEmpty(personaWrapper.idEditabili)}" />
@@ -48,7 +48,7 @@
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.coordinatoreComitatoScientifico ? #messages.msg('label.sì') : #messages.msg('label.no')}"></div>
 								</div>
 							</th:block>
@@ -58,20 +58,20 @@
 						<!-- COGNOME -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cognome')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cognome',personaWrapper.ruolo) : ''}"></label>
-							
+
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cognome_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cognome}">Cognome</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="cognome_persona"	name="cognome_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${personaWrapper.persona.anagrafica.cognome}" />
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.cognome}"></div>
 								</div>
 							</th:block>
@@ -86,14 +86,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="nome_persona" name="nome_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${personaWrapper.persona.anagrafica.nome}" />
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.nome}"></div>
 								</div>
 							</th:block>
@@ -108,14 +108,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="codiceFiscale_persona" name="codiceFiscale_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter) or personaWrapper.isLookup}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${personaWrapper.persona.anagrafica.codiceFiscale}" />
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.codiceFiscale}"></div>
 								</div>
 							</th:block>
@@ -129,7 +129,7 @@
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cf_straniero}">Ha un codice fiscale non italiano</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="checkbox">
 										<input id="isStraniero_persona" name="isStraniero_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
 											class="flat" type="checkbox" th:field="${personaWrapper.persona.anagrafica.straniero}" />
@@ -137,7 +137,7 @@
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.straniero ? #messages.msg('label.sì') : #messages.msg('label.no')}">Sì</div>
 								</div>
 							</th:block>
@@ -151,14 +151,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="telefono_persona" name="telefono_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="tel" th:field="${personaWrapper.persona.anagrafica.telefono}" />
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.telefono}"></div>
 								</div>
 							</th:block>
@@ -177,14 +177,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="cellulare_persona" name="cellulare_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="tel" th:field="${personaWrapper.persona.anagrafica.cellulare}" />
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.cellulare}"></div>
 								</div>
 							</th:block>
@@ -199,14 +199,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="email_persona" name="email_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="email" th:field="${personaWrapper.persona.anagrafica.email}" />
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.email}"></div>
 								</div>
 							</th:block>
@@ -222,14 +222,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="pec_persona" name="pec_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="email" th:field="${personaWrapper.persona.anagrafica.pec}" />
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.anagrafica.pec}"></div>
 								</div>
 							</th:block>
@@ -238,9 +238,7 @@
 
 						<!-- PROFESSIONE -->
 						<div th:if="${personaWrapper.persona.coordinatoreComitatoScientifico} or
-									${personaWrapper.persona.componenteComitatoScientifico} or
-									${personaWrapper.persona.responsabileSistemaInformatico} or
-									${personaWrapper.persona.responsabileQualita}"
+									${personaWrapper.persona.componenteComitatoScientifico}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.professione')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.professione',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="professione_persona">
@@ -248,7 +246,7 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 		                        	<select id="professione_persona" class="selectpicker"
 										data-width="100%" data-style="btn-primary" data-actions-box="true"
 										data-size="10" title="Seleziona una professione..."
@@ -261,7 +259,7 @@
 							  	</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${personaWrapper.persona.professione.nome}"></div>
 								</div>
 							</th:block>
@@ -271,17 +269,17 @@
 						<!-- ALLEGATO 1 (ATTO DI NOMINA) -->
 						<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.attoNomina',personaWrapper.ruolo) : null}, null, true, ${editabile})" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.attoNomina',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)" ></th:block>
 						</div>
 
 						<!-- ALLEGATO 2 (CURRICULUM VITAE) -->
 						<div th:if="${editabile}" class="divider-dashed"></div>
-						<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.cv',personaWrapper.ruolo) : null}, null, true, ${editabile})"></th:block>
+						<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.cv',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)"></th:block>
 
 						<!-- ALLEGATO 3 (DELEGA) -->
 						<div th:if="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.delega',personaWrapper.ruolo) : null}, null, true, ${editabile})"></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.delega',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)"></th:block>
 						</div>
 					</form>
 				</div>
