--- a/src/main/resources/templates/sede/sedeFragment.html
+++ b/src/main/resources/templates/sede/sedeFragment.html
@@ -39,7 +39,7 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<select id="provincia_sede" class="form-control required" th:field="${sedeWrapper.sede.provincia}"
 										th:disabled="${coincide or !#lists.contains(sedeWrapper.idEditabili, counter)}">
 	                          			<option value="" th:text="#{label.seleziona}">label.seleziona</option>
@@ -63,7 +63,7 @@
 							  	</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${sedeWrapper.sede.provincia}"></div>
 								</div>
 							</th:block>
@@ -79,14 +79,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<select th:disabled="${!#lists.contains(sedeWrapper.idEditabili, counter) or coincide}" id="comune_sede" class="form-control required" th:field="${sedeWrapper.sede.comune}">
 										<option th:value="${sedeWrapper.sede.comune}" th:text="${sedeWrapper.sede.comune}"/>
 		                        	</select>
 							  	</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${sedeWrapper.sede.comune}"></div>
 								</div>
 							</th:block>
@@ -102,7 +102,7 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="indirizzo_sede" name="indirizzo_sede"
 										required="required" class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${sedeWrapper.sede.indirizzo}"
@@ -110,7 +110,7 @@
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${sedeWrapper.sede.indirizzo}"></div>
 								</div>
 							</th:block>
@@ -126,7 +126,7 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<select id="CAP_sede" class="form-control required" th:field="${sedeWrapper.sede.cap}"
 										th:disabled="${!#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 										<option th:value="${sedeWrapper.sede.cap}" th:text="${sedeWrapper.sede.cap}"/>
@@ -134,7 +134,7 @@
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${sedeWrapper.sede.cap}"></div>
 								</div>
 							</th:block>
@@ -150,7 +150,7 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="telefono_sede" name="telefono_sede"
 										required="required" class="form-control col-md-7 col-xs-12"
 										type="tel" th:field="${sedeWrapper.sede.telefono}"
@@ -158,7 +158,7 @@
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${sedeWrapper.sede.telefono}"></div>
 								</div>
 							</th:block>
@@ -174,14 +174,14 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="fax_sede" name="fax_sede" required="required"
 										class="form-control col-md-7 col-xs-12" type="tel" th:field="${sedeWrapper.sede.fax}"
 										th:disabled="${!#lists.contains(sedeWrapper.idEditabili, counter) or coincide}"/>
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${sedeWrapper.sede.fax}"></div>
 								</div>
 							</th:block>
@@ -197,7 +197,7 @@
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<input id="email_sede" name="email_sede"
 										required="required" class="form-control col-md-7 col-xs-12"
 										type="email" th:field="${sedeWrapper.sede.email}"
@@ -205,7 +205,7 @@
 								</div>
 							</th:block>
 							<th:block th:unless="${editabile}">
-								<div class="col-md-4 col-sm-4 col-xs-12">
+								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="value" th:text="${sedeWrapper.sede.email}"></div>
 								</div>
 							</th:block>
