--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -302,7 +302,7 @@
 										<div class="clearfix"></div>
 									</div>
 									<div class="x_content">
-										<div th:unless="${accreditamentoWrapper.comitatoScientificoStato or !editabile}" th:text="#{${accreditamentoWrapper.comitatoScientificoErrorMessage}}" class="alert alert-error"></div>
+										<div th:if="${editabile}" th:text="#{label.numero_minimo_comitato}" class="alert alert-warning"></div>
 										<div th:if="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico) and (accreditamentoWrapper.coordinatoreComitatoScientifico == null)}" th:text="#{label.nessun_componente_comitato}"></div>
 										<table th:unless="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico) and (accreditamentoWrapper.coordinatoreComitatoScientifico == null)}" id="comitato-table" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${editabile ? 'datatable-responsive-comitato-edit' : 'datatable-responsive-comitato-show'}">
 											<thead>
