Update IDFIELD WIP

--- a/src/main/resources/templates/accreditamento/accreditamentoList.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoList.html
@@ -14,8 +14,8 @@
 							accreditamenti</h2>
 						<div class="pull-right buttons-header">
 							<a class="btn btn-primary pull-right"
-									th:if="${canProviderCreateAccreditamento}"
-									th:href="@{/provider/accreditamento/new}"
+									th:if="${canProviderCreateAccreditamento} or ${#authentication.principal.hasProfile('SEGRETRIA')}"
+									th:href="@{|/provider/${providerId}/accreditamento/new|}"
 									th:text="#{label.nuova_domanda}">label.nuova_domanda</a>
 							<a class="btn btn.primary pull-right" th:if="${back}" th:href="@{|/provider/list|}"
 								th:text="#{label.indietro}">Indietro</a>
