--- a/src/main/resources/templates/provider/providerEdit.html
+++ b/src/main/resources/templates/provider/providerEdit.html
@@ -5,7 +5,7 @@
 <head lang="it">
 </head>
 <body>
-	<div layout:fragment="content" th:with="counter=${providerWrapper.idOffset - 1}">
+	<div layout:fragment="content" th:with="counter=${0}">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
